Implement mount_option_tmp_noexec for slmicro5 platform
Make sure that for slmicro5 platform we do check that noexec option is set for the tmp partition

--- a/linux_os/guide/system/permissions/partitions/mount_option_tmp_noexec/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_tmp_noexec/rule.yml
@@ -23,6 +23,7 @@ identifiers:
     cce@rhel10: CCE-87095-6
     cce@sle12: CCE-91586-8
     cce@sle15: CCE-91272-5
+    cce@slmicro5: CCE-94079-1
 
 references:
     cis-csc: 11,13,14,3,8,9
@@ -39,7 +40,12 @@ references:
     srg: SRG-OS-000368-GPOS-00154
     stigid@ol8: OL08-00-040125
 
+{{% if product == 'slmicro5' %}}
+platform: system_with_kernel
+{{% else %}}
 platform: mount[tmp]
+{{% endif %}}
+
 
 template:
     name: mount_option
