Make sure that slmicro5 is considered suse family so grub macros work

--- a/products/slmicro5/product.yml
+++ b/products/slmicro5/product.yml
@@ -2,6 +2,9 @@ product: slmicro5
 full_name: SUSE Linux Enterprise Micro 5
 type: platform
 
+families:
+  - suse
+
 major_version_ordinal: 5
 
 benchmark_id: SLMICRO5
