--- a/linux_os/guide/system/network/network-ipv6/disabling_ipv6/sysctl_net_ipv6_conf_all_disable_ipv6/rule.yml
+++ b/linux_os/guide/system/network/network-ipv6/disabling_ipv6/sysctl_net_ipv6_conf_all_disable_ipv6/rule.yml
@@ -49,7 +49,11 @@ ocil: |-
     files in <tt>/etc/sysctl.d</tt>:
     <pre>$ grep -r ipv6 /etc/sysctl.d</pre>
 
+{{% if product in ["sle12", "sle15", "slmicro5"] %}}
+platform: ipv6[enabled]
+{{% else %}}
 platform: system_with_kernel
+{{% endif %}}
 
 template:
     name: sysctl
