Mark as automated

--- a/controls/stig_ubuntu2404.yml
+++ b/controls/stig_ubuntu2404.yml
@@ -436,7 +436,7 @@ controls:
       - accounts_passwords_pam_faillock_interval
       - accounts_passwords_pam_faillock_silent
       - accounts_passwords_pam_faillock_unlock_time
-    status: planned
+    status: automated
 
   - id: UBTU-24-200640
     title: Ubuntu 24.04 LTS must display the Standard Mandatory DOD Notice and Consent
