Move suse specific reference to product definition

--- a/controls/general_slmicro5.yml
+++ b/controls/general_slmicro5.yml
@@ -8,7 +8,8 @@ levels:
     - id: high
     - id: medium
     - id: low
-
+product: slmicro5
+      
 controls:
   - id: SLEM-5-SET-01020000
     title: Ensure /tmp Located On Separate Partition
