--- a/products/slmicro5/product.yml
+++ b/products/slmicro5/product.yml
@@ -46,6 +46,8 @@ platform_package_overrides:
   sssd: "sssd"
   passwd: "shadow"
 
+reference_uris:
+  suse-general: 'not_publicly_available'
 
 sysctl_remediate_drop_in_file: "true"
 journald_conf_dir_path: /etc/systemd/journal.conf.d
