FIx stig rule UBTU-24-700100

--- a/linux_os/guide/system/permissions/files/permissions_var_log_dir/file_groupowner_var_log/rule.yml
+++ b/linux_os/guide/system/permissions/files/permissions_var_log_dir/file_groupowner_var_log/rule.yml
@@ -40,6 +40,7 @@ template:
         filepath: /var/log/
         gid_or_name: '0'
         gid_or_name@ubuntu2204: syslog
+        gid_or_name@ubuntu2404: syslog
 
 fixtext: |-
     {{{ describe_file_group_owner(file="/var/log", group=gid) }}}
