sshd_limit_user_access is missing the opening tag
Signed-off-by: Paul Bastide <pbastide@us.ibm.com>

--- a/linux_os/guide/services/ssh/ssh_server/sshd_limit_user_access/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_limit_user_access/rule.yml
@@ -38,7 +38,7 @@ ocil_clause: 'sshd does not limit the users who can log in'
 
 ocil: |-
     To ensure sshd limits the users who can log in, run the following:
-    pre>$ sudo grep -rPi '^\h*(allow|deny)(users|groups)\h+\H+(\h+.*)?$' /etc/ssh/sshd_config*</pre>
+    <pre>$ sudo grep -rPi '^\h*(allow|deny)(users|groups)\h+\H+(\h+.*)?$' /etc/ssh/sshd_config*</pre>
     If properly configured, the output should be a list of usernames and/or
     groups allowed to log in to this system.
 
