Include marcusburghardt in rules without group
I am activelly involved with SSG.

Signed-off-by: Marcus Burghardt <maburgha@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,6 @@
 # Global Owners
-/CODEOWNERS @vojtapolasek @jan-cerny @mab879 @ggbecker
-/ssg/ @vojtapolasek @jan-cerny @mab879 @ggbecker
+/CODEOWNERS @vojtapolasek @jan-cerny @mab879 @ggbecker @marcusburghardt
+/ssg/ @vojtapolasek @jan-cerny @mab879 @ggbecker @marcusburghardt
 /tests/ @matusmarhefka @mab879 @vojtapolasek @jan-cerny
 /linux_os/**/tests @matusmarhefka @mab879 @vojtapolasek @jan-cerny
 /shared/**/tests @matusmarhefka @mab879 @vojtapolasek @jan-cerny
