fix: Update some DoD verbiage in rules.yml to make it more organization agnostic

--- a/linux_os/guide/services/ssh/ssh_server/sshd_enable_warning_banner/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_enable_warning_banner/rule.yml
@@ -50,14 +50,14 @@ references:
 {{{ complete_ocil_entry_sshd_option(default="no", option="Banner", value="/etc/issue") }}}
 
 fixtext: |-
-    Configure {{{ full_name }}} to display the Standard Mandatory DoD Notice and Consent Banner before granting access to the system via the ssh.
+    Configure {{{ full_name }}} to display the Standard Mandatory Notice and Consent Banner before granting access to the system via the ssh.
 
     Edit the "/etc/ssh/sshd_config" file to uncomment the banner keyword and configure it to point to a file that will contain the logon banner (this file may be named differently or be in a different location if using a version of SSH that is provided by a third-party vendor).
     An example configuration line is:
 
     Banner /etc/issue
 
-srg_requirement: '{{{ full_name }}} must display the Standard Mandatory DoD Notice and Consent Banner before granting local or remote access to the system via a ssh logon.'
+srg_requirement: '{{{ full_name }}} must display the Standard Mandatory Notice and Consent Banner before granting local or remote access to the system via a ssh logon.'
 
 {{% if 'ubuntu' not in product %}}
 conflicts:
