--- a/linux_os/guide/services/usbguard/configure_usbguard_auditbackend/rule.yml
+++ b/linux_os/guide/services/usbguard/configure_usbguard_auditbackend/rule.yml
@@ -45,7 +45,7 @@ fixtext: |-
 
     AuditBackend=LinuxAudit
 
-srg_requirement: {{{ full_name }}} Must Provide Audit Record Generation Capability For Dod-Defined Auditable Events For All Operating System Components
+srg_requirement: {{{ full_name }}} Must Provide Audit Record Generation Capability For Organization Defined Auditable Events For All Operating System Components
 
 template:
     name: key_value_pair_in_file
