--- a/linux_os/guide/system/accounts/accounts-banners/gui_login_banner/dconf_gnome_banner_enabled/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-banners/gui_login_banner/dconf_gnome_banner_enabled/rule.yml
@@ -66,7 +66,7 @@ ocil: |-
     If properly configured, the output should be <tt>/org/gnome/login-screen/banner-message-enable</tt>.
 
 fixtext: |-
-    Configure {{{ full_name }}} to display the Standard Mandatory DoD Notice and Consent Banner before granting access to the system.
+    Configure {{{ full_name }}} to display the Standard Mandatory Notice and Consent Banner before granting access to the system.
 
     Note: If the system does not have a graphical user interface installed, this requirement is Not Applicable.
 
