--- a/linux_os/guide/system/accounts/accounts-pam/password_quality/password_quality_pamcracklib/cracklib_accounts_password_pam_dcredit/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/password_quality/password_quality_pamcracklib/cracklib_accounts_password_pam_dcredit/rule.yml
@@ -40,8 +40,8 @@ ocil: |-
     password requisite pam_cracklib.so dcredit={{{ xccdf_value("var_password_pam_dcredit") }}}</pre>
     The <tt>dcredit</tt> parameter (as a negative number) will indicate how
     many digits are required.
-    The DoD requires at least one digit in a password.
-    This would appear as <tt>dcredit=-1</tt>.
+    The profile requires at least {{{ xccdf_value("var_password_pam_dcredit") }}} digit in a password.
+    This would appear as <tt>dcredit=-{{{ xccdf_value("var_password_pam_dcredit") }}}</tt>.
 
 template:
     name: pam_options
