--- a/linux_os/guide/system/accounts/accounts-pam/password_quality/password_quality_pamcracklib/cracklib_accounts_password_pam_ucredit/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/password_quality/password_quality_pamcracklib/cracklib_accounts_password_pam_ucredit/rule.yml
@@ -43,8 +43,8 @@ ocil: |-
     password requisite pam_cracklib.so ucredit={{{ xccdf_value("var_password_pam_ucredit") }}}</pre>
     The <tt>ucredit</tt> parameter (as a negative number) will indicate how
     many uppercase characters are required.
-    The DoD and FISMA require at least one uppercase character in a password.
-    This would appear as <tt>ucredit=-1</tt>.
+    The profile require at least {{{ xccdf_value("var_password_pam_ucredit") }}} uppercase character in a password.
+    This would appear as <tt>ucredit=-{{{ xccdf_value("var_password_pam_ucredit") }}}</tt>.
 
 template:
     name: pam_options
