--- a/linux_os/guide/system/accounts/accounts-physical/screen_locking/smart_card_login/smartcard_pam_enabled/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-physical/screen_locking/smart_card_login/smartcard_pam_enabled/rule.yml
@@ -46,9 +46,8 @@ rationale: |-
 
     Multifactor solutions that require devices separate from information
     systems gaining access include, for example, hardware tokens providing
-    time-based or challenge-response authenticators and smart cards such as the
-    U.S. Government Personal Identity Verification card and the DoD Common
-    Access Card.
+    time-based or challenge-response authenticators and smart cards
+    or similar secure authentication devices issued by an organization or identity provider.
 
 severity: medium
 
@@ -67,7 +66,7 @@ references:
 ocil_clause: 'non-exempt accounts are not using CAC authentication'
 
 ocil: |-
-    Remote access is access to DoD nonpublic information systems by an
+    Remote access is access to nonpublic information systems by an
     authorized user (or an information system) communicating through an
     external, non-organization-controlled network. Remote access methods
     include, for example, dial-up, broadband, and wireless.
