--- a/linux_os/guide/system/software/integrity/crypto/configure_openssl_crypto_policy/rule.yml
+++ b/linux_os/guide/system/software/integrity/crypto/configure_openssl_crypto_policy/rule.yml
@@ -65,4 +65,4 @@ fixtext: |-
     {{{ include_directive }}}
 
 srg_requirement: |-
-    {{{ full_name }}} must implement DoD-approved encryption in the OpenSSL package.
+    {{{ full_name }}} must implement approved encryption in the OpenSSL package.
