--- a/linux_os/guide/system/software/integrity/crypto/configure_ssh_crypto_policy/rule.yml
+++ b/linux_os/guide/system/software/integrity/crypto/configure_ssh_crypto_policy/rule.yml
@@ -52,4 +52,4 @@ fixtext: |-
     $ sudo sed -i "/^\s*CRYPTO_POLICY.*$/Id" /etc/sysconfig/sshd
 
 srg_requirement: |-
-    {{{ full_name }}} must implement DoD-approved encryption in the OpenSSH package.
+    {{{ full_name }}} must implement approved encryption in the OpenSSH package.
