--- a/linux_os/guide/system/software/integrity/endpoint_security_software/mcafee_security_software/mcafee_hbss_software/package_MFEhiplsm_installed/rule.yml
+++ b/linux_os/guide/system/software/integrity/endpoint_security_software/mcafee_security_software/mcafee_hbss_software/package_MFEhiplsm_installed/rule.yml
@@ -47,7 +47,7 @@ conflicts:
 warnings:
     - functionality: |-
         Installing and enabling this module conflicts with SELinux.
-        Per DoD/DISA guidance, SELinux takes precedence over this module.
+        Per profile guidance, SELinux takes precedence over this module.
     - general: |-
         Due to McAfee HIPS being 3rd party software, automated
         remediation is not available for this configuration check.
