--- a/linux_os/guide/services/http/securing_httpd/httpd_modules_improve_security/httpd_deploy_mod_ssl/httpd_require_client_certs/rule.yml
+++ b/linux_os/guide/services/http/securing_httpd/httpd_modules_improve_security/httpd_deploy_mod_ssl/httpd_require_client_certs/rule.yml
@@ -9,7 +9,7 @@ description: |-
     <pre>SSLVerifyClient require</pre>
 
 rationale: |-
-    Web sites requiring authentication within the DoD must utilize PKI as an
+    Web sites requiring authentication must utilize PKI as an
     authentication mechanism for web users. Information systems residing behind web
     servers requiring authorization based on individual identity must use the
     identity provided by certificate-based authentication to support access control
