--- a/linux_os/guide/services/http/securing_httpd/httpd_public_resources_not_shared/rule.yml
+++ b/linux_os/guide/services/http/securing_httpd/httpd_public_resources_not_shared/rule.yml
@@ -5,7 +5,7 @@ title: 'Public web server resources must not be shared with private assets'
 
 description: |-
     It is important to segregate public web server resources from private
-    resources located behind the DoD DMZ in order to protect private
+    resources located behind a DMZ in order to protect private
     assets.
 
 rationale: |-
