--- a/linux_os/guide/services/ssh/ssh_server/sshd_enable_pubkey_auth/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_enable_pubkey_auth/rule.yml
@@ -18,8 +18,8 @@ rationale: |-
     requires using two or more factors to achieve authentication.
     A privileged account is defined as an information system account with
     authorizations of a privileged user. 
-    The DoD CAC with DoD-approved PKI is an example of multifactor
-    authentication.
+    Smart cards or hardware tokens paired with digital certificates are
+    common examples of multifactor implementations.
 
 severity: medium
 
