--- a/linux_os/guide/services/ssh/ssh_server/sshd_use_approved_kex_ordered_stig/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_use_approved_kex_ordered_stig/rule.yml
@@ -28,7 +28,7 @@ description: |-
     order of algorithms.
 
 rationale: |-
-    DoD information systems are required to use FIPS-approved key exchange algorithms.
+    FIPS-approved key exchange algorithms are required to be used.
     The system will attempt to use the first algorithm presented by the client that matches
     the server list. Listing the values "strongest to weakest" is a method to ensure the use
     of the strongest algorithm available to secure the SSH connection.
