--- a/linux_os/guide/services/ssh/ssh_server/sshd_use_approved_macs/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_use_approved_macs/rule.yml
@@ -34,8 +34,8 @@ description: |-
     The rule is parametrized to use the following MACs: <code>{{{ xccdf_value("sshd_approved_macs") }}}</code>.
 
 rationale: |-
-    DoD Information Systems are required to use FIPS-approved cryptographic hash
-    functions. The only SSHv2 hash algorithms meeting this requirement is SHA2.
+    FIPS-approved cryptographic hash functions are required to be used.
+    The only SSHv2 hash algorithms meeting this requirement is SHA2.
 
 severity: medium
 
