--- a/linux_os/guide/system/accounts/accounts-physical/screen_locking/smart_card_login/install_smartcard_packages/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-physical/screen_locking/smart_card_login/install_smartcard_packages/rule.yml
@@ -32,9 +32,8 @@ rationale: |-
     <br /><br />
     Multifactor solutions that require devices separate from
     information systems gaining access include, for example, hardware tokens
-    providing time-based or challenge-response authenticators and smart cards such
-    as the U.S. Government Personal Identity Verification card and the DoD Common
-    Access Card.
+    providing time-based or challenge-response authenticators and smart cards
+    or similar secure authentication devices issued by an organization or identity provider.
 
 severity: medium
 
