--- a/linux_os/guide/system/software/integrity/endpoint_security_software/mcafee_security_software/install_mcafee_antivirus/rule.yml
+++ b/linux_os/guide/system/software/integrity/endpoint_security_software/mcafee_security_software/install_mcafee_antivirus/rule.yml
@@ -5,7 +5,7 @@ title: 'Install McAfee Virus Scanning Software'
 
 description: |-
     Install McAfee VirusScan Enterprise for Linux antivirus software
-    which is provided for DoD systems and uses signatures to search for the
+    which is provided for systems and uses signatures to search for the
     presence of viruses on the filesystem.
 
 rationale: |-
