--- a/linux_os/guide/system/software/integrity/endpoint_security_software/mcafee_security_software/mcafee_endpoint_security_software/package_mcafeetp_installed/rule.yml
+++ b/linux_os/guide/system/software/integrity/endpoint_security_software/mcafee_security_software/mcafee_endpoint_security_software/package_mcafeetp_installed/rule.yml
@@ -11,7 +11,7 @@ title: 'Install McAfee Endpoint Security for Linux (ENSL)'
 
 description: |-
     Install McAfee Endpoint Security for Linux antivirus software
-    which is provided for DoD systems and uses signatures to search for the
+    which is provided for systems and uses signatures to search for the
     presence of viruses on the filesystem.
 
     {{{ describe_package_install(package=pkg) }}}
