--- a/products/firefox/guide/firefox/firefox_policy-disable_pocket/rule.yml
+++ b/products/firefox/guide/firefox/firefox_policy-disable_pocket/rule.yml
@@ -10,7 +10,7 @@ description: |-
 
 rationale: |-
     Pocket is a social bookmarking service for storing, sharing, and discovering web bookmarks.
-    Data gathering cloud services such as Pocket are generally disabled in the DoD.
+    Data gathering cloud services such as Pocket are generally disabled in some organizations such as the DoD.
 
 severity: medium
 
