--- a/products/firefox/guide/firefox/firefox_policy-disable_studies/rule.yml
+++ b/products/firefox/guide/firefox/firefox_policy-disable_studies/rule.yml
@@ -9,7 +9,7 @@ description: |-
     in the policies file.
 
 rationale: |-
-    Studies try out different features and ideas prior to release to all Firefox users. Testing beta software is not in the DoD user's mission.
+    Studies try out different features and ideas prior to release to all Firefox users. Testing beta software is not in the profile user's mission.
 
 severity: medium
 
