--- a/products/firefox/guide/firefox/firefox_policy-password_manager/rule.yml
+++ b/products/firefox/guide/firefox/firefox_policy-password_manager/rule.yml
@@ -8,7 +8,7 @@ description: |-
     the <tt>PasswordManager</tt> key under <tt>policies</tt> to <tt>false</tt>.
 
 rationale: |-
-    Firefox can be set to store passwords for sites visited by the user. These individual passwords are stored in a file and can be protected by a master password. Autofill of the password can then be enabled when the site is visited. This feature could also be used to autofill the certificate PIN, which could lead to compromise of DoD information.
+    Firefox can be set to store passwords for sites visited by the user. These individual passwords are stored in a file and can be protected by a master password. Autofill of the password can then be enabled when the site is visited. This feature could also be used to autofill the certificate PIN, which could lead to compromise of information.
 severity: medium
 
 references:
