--- a/products/firefox/guide/firefox/firefox_policy-verification/rule.yml
+++ b/products/firefox/guide/firefox/firefox_policy-verification/rule.yml
@@ -10,8 +10,8 @@ description: |-
     in an administrative policies file
 
 rationale: |-
-    Websites within DoD require user authentication for access which increases
-    security for DoD information. Access will be denied to the user if
+    Websites within the organization require user authentication for access which increases
+    security for the information within. Access will be denied to the user if
     certificate management is not configured.
 
 severity: medium
