--- a/linux_os/guide/services/ssh/ssh_server/sshd_use_approved_macs_ordered_stig/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_use_approved_macs_ordered_stig/rule.yml
@@ -22,8 +22,8 @@ description: |-
     {{%- endif %}}
 
 rationale: |-
-    DoD Information Systems are required to use FIPS-approved cryptographic hash
-    functions. The only SSHv2 hash algorithms meeting this requirement is SHA2.
+    FIPS-approved cryptographic hash functions are required to be used.
+    The only SSHv2 hash algorithms meeting this requirement is SHA2.
 
 severity: medium
 
