--- a/linux_os/guide/system/accounts/accounts-banners/gui_login_banner/dconf_gnome_login_banner_text/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-banners/gui_login_banner/dconf_gnome_login_banner_text/rule.yml
@@ -76,7 +76,7 @@ ocil: |-
     {{% endif %}}
 
 fixtext: |-
-    Configure {{{ full_name }}} to display the Standard Mandatory DoD Notice and Consent Banner before granting access to the system.
+    Configure {{{ full_name }}} to display the Standard Mandatory Notice and Consent Banner before granting access to the system.
 
     Note: If the system does not have a graphical user interface installed, this requirement is Not Applicable.
 
