--- a/linux_os/guide/system/accounts/accounts-pam/password_quality/password_quality_pwquality/accounts_password_pam_pwquality_retry/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/password_quality/password_quality_pwquality/accounts_password_pam_pwquality_retry/rule.yml
@@ -7,7 +7,7 @@ description: |-
     To configure the number of retry prompts that are permitted per-session:
     Edit the <tt>/etc/security/pwquality.conf</tt> to include
     <tt>retry={{{xccdf_value("var_password_pam_retry") }}}</tt>, or a lower value if site
-    policy is more restrictive. The DoD requirement is a maximum of 3 prompts
+    policy is more restrictive. The profile requirement is a maximum of <tt>retry={{{xccdf_value("var_password_pam_retry") }}}</tt> prompts
     per session.
 
 rationale: |-
