--- a/linux_os/guide/system/network/network-ufw/check_ufw_active/rule.yml
+++ b/linux_os/guide/system/network/network-ufw/check_ufw_active/rule.yml
@@ -10,7 +10,7 @@ description: |-
 rationale: |-
     Remote access services, such as those providing remote access to network devices and information systems, 
     which lack automated control capabilities, increase risk and make remote user access management difficult at best.  
-    Remote access is access to DOD nonpublic information systems by an authorized user (or an information system) communicating 
+    Remote access is access to nonpublic information systems by an authorized user (or an information system) communicating 
     through an external, nonorganization-controlled network. Remote access methods include, for example, dial-up, broadband, and wireless.  
     Ubuntu 22.04 LTS functionality (e.g., RDP) must be capable of taking enforcement action if the audit reveals unauthorized activity. 
     Automated control of remote access sessions allows organizations to ensure ongoing compliance with remote access policies by 
