--- a/linux_os/guide/system/software/integrity/endpoint_security_software/mcafee_security_software/mcafee_endpoint_security_software/agent_mfetpd_running/rule.yml
+++ b/linux_os/guide/system/software/integrity/endpoint_security_software/mcafee_security_software/mcafee_endpoint_security_software/agent_mfetpd_running/rule.yml
@@ -5,7 +5,7 @@ title: 'Ensure McAfee Endpoint Security for Linux (ENSL) is running'
 
 description: |-
     Install McAfee Endpoint Security for Linux antivirus software
-    which is provided for DoD systems and uses signatures to search for the
+    which is provided for systems and uses signatures to search for the
     presence of viruses on the filesystem.
 
 rationale: |-
