--- a/controls/stig_ubuntu2404.yml
+++ b/controls/stig_ubuntu2404.yml
@@ -1010,6 +1010,7 @@ controls:
       - var_multiple_time_servers=stig
       - chronyd_configure_pool_and_server
       - chronyd_or_ntpd_set_maxpoll
+      - chronyd_server_directive
     status: automated
 
   - id: UBTU-24-600180
