Fix file_owner template to only change invalid ownerships
The previous non-recursive remediation always changed
the ownership, even when the existing owner was valid.

This is an issue if there are multiple valid values for the owner
(e.g. OWNERS="root|syslog").

The fix checks if the current owner is valid (in OWNERS),
and changes the ownership only if invalid.

--- a/shared/templates/file_owner/bash.template
+++ b/shared/templates/file_owner/bash.template
@@ -40,7 +40,9 @@ find -P {{{ path }}} {{{ FIND_RECURSE_ARGS_DEP }}} -type f {{{ ns.find_users }}}
 find -P {{{ path }}} {{{ FIND_RECURSE_ARGS_DEP }}} -type d {{{ ns.find_users }}} -exec chown --no-dereference "$newown" {} \;
 {{%- endif %}}
 {{%- else %}}
-chown --no-dereference "$newown" {{{ path }}}
+if ! stat -c "%u %U" "{{{ path }}}" | grep -E -w -q "{{{ UID_OR_NAME }}}"; then
+    chown --no-dereference "$newown" {{{ path }}}
+fi
 {{%- endif %}}
 {{%- endfor %}}
 
