Disable symlink dereference in file_groupowner template

--- a/shared/templates/file_groupowner/ansible.template
+++ b/shared/templates/file_groupowner/ansible.template
@@ -6,10 +6,8 @@
 
 {{%- if RECURSIVE %}}
 {{%- set FIND_RECURSE_ARGS_DEP="" %}}
-{{%- set FIND_RECURSE_ARGS_SYM="" %}}
 {{%- else %}}
 {{%- set FIND_RECURSE_ARGS_DEP="-maxdepth 1" %}}
-{{%- set FIND_RECURSE_ARGS_SYM="-L" %}}
 {{%- endif %}}
 
 {{%- set ns=namespace(find_groups="") %}}
@@ -41,7 +39,7 @@
 {{%- if FILE_REGEX %}}
 
 - name: Find {{{ path }}} file(s) matching {{{ FILE_REGEX[loop.index0] }}}{{% if RECURSIVE %}} recursively{{% endif %}}
-  command: 'find {{{ FIND_RECURSE_ARGS_SYM }}} {{{ path }}} {{{ FIND_RECURSE_ARGS_DEP }}} -type f {{{ ns.find_groups }}} -regextype posix-extended -regex "{{{ FILE_REGEX[loop.index0] }}}"'
+  command: 'find -P {{{ path }}} {{{ FIND_RECURSE_ARGS_DEP }}} -type f {{{ ns.find_groups }}} -regextype posix-extended -regex "{{{ FILE_REGEX[loop.index0] }}}"'
   register: files_found
   changed_when: False
   failed_when: False
@@ -50,6 +48,7 @@
 - name: Ensure group owner on {{{ path }}} file(s) matching {{{ FILE_REGEX[loop.index0] }}}
   file:
     path: "{{ item }}"
+    follow: false
     group: "{{ {{{ _RULE_ID }}}_newgroup }}"
     state: file
   with_items:
@@ -60,6 +59,7 @@
 - name: Ensure group owner on {{{ path }}}{{% if RECURSIVE %}} recursively{{% endif %}}
   file:
     path: "{{{ path }}}"
+    follow: false
     state: directory
 {{% if RECURSIVE %}}
     recurse: yes
@@ -77,6 +77,7 @@
 - name: Ensure group owner on {{{ path }}}
   file:
     path: "{{{ path }}}"
+    follow: false
     group: "{{ {{{ _RULE_ID }}}_newgroup }}"
   when: file_exists.stat is defined and file_exists.stat.exists
 
