--- a/shared/templates/file_groupowner/bash.template
+++ b/shared/templates/file_groupowner/bash.template
@@ -40,7 +40,9 @@ find -P {{{ FIND_RECURSE_ARGS_SYM }}} {{{ path }}} {{{ FIND_RECURSE_ARGS_DEP }}}
 find -P {{{ path }}} {{{ FIND_RECURSE_ARGS_DEP }}} -type d {{{ ns.find_groups }}} -exec chgrp --no-dereference "$newgroup" {} \;
 {{%- endif %}}
 {{%- else %}}
-chgrp --no-dereference "$newgroup" {{{ path }}}
+if ! stat -c "%g %G" "{{{ path }}}" | grep -E -w -q "{{{ GID_OR_NAME }}}"; then
+    chgrp --no-dereference "$newgroup" {{{ path }}}
+fi
 {{%- endif %}}
 {{%- endfor %}}
 
