Implement file_groupownerships_var_log_landscape rule
Rule ensures /var/log/landscape is group-owned by root|landscape.

--- a/controls/cis_ubuntu2404.yml
+++ b/controls/cis_ubuntu2404.yml
@@ -2446,6 +2446,7 @@ controls:
       - file_groupownerships_var_log_apt
       - file_groupownerships_var_log_gdm
       - file_groupownerships_var_log_gdm3
+      - file_groupownerships_var_log_landscape
       - file_groupownerships_var_log_sssd
       - file_groupowner_var_log_auth
       - file_groupowner_var_log_cloud_init
