--- a/components/filesystem.yml
+++ b/components/filesystem.yml
@@ -54,6 +54,7 @@ rules:
 - file_groupownership_system_commands_dirs
 - file_groupownerships_var_log
 - file_groupownerships_var_log_apt
+- file_groupownerships_var_log_landscape
 - file_groupownerships_var_log_gdm
 - file_groupownerships_var_log_gdm3
 - file_groupownerships_var_log_sssd
